--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,10 @@ RewriteRule ^([^\.]+)$ $1.html [NC,L]
 RewriteCond %{HTTPS} off
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 
+RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
+RewriteRule ^ /%1 [NC,L,R]
+
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^ %{REQUEST_URI}.html [NC,L]
+
 ErrorDocument 404 /not-found-page
