--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.1",
     "classnames": "^2.3.2",
     "next": "13.0.0",
     "react": "18.2.0",
