--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "eslint": "8.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
     "eslint-config-next": "13.0.0",
-    "typescript": "4.8.4"
+    "typescript": "^4.8.4"
   }
 }
