Added "Join" page + Discord components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 	"typescript.tsserver.experimental.enableProjectDiagnostics": true,
 	"cSpell.words": [
 		"Badlion",
+		"dozoe",
 		"instagram",
 		"Minecraft",
 		"Purpur",
