--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "npx rimraf .next && next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -24,6 +24,7 @@
 		"@typescript-eslint/parser": "^5.42.0",
 		"eslint": "^8.26.0",
 		"eslint-config-next": "^13.0.0",
+		"rimraf": "^3.0.2",
 		"typescript": "^4.8.4"
 	}
 }
