--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@next/font": "^13.0.1",
+		"@vercel/analytics": "^0.1.3",
 		"classnames": "^2.3.2",
 		"next": "^13.0.1",
 		"react": "^18.2.0",
