--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"sass": "^1.55.0",
-		"url-exists": "^1.0.3"
+		"url-exists": "^1.0.3",
+		"valid-url": "^1.0.9"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.7",
