--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
 	"plugins": ["@typescript-eslint"],
 	"rules": {
 		"no-empty-pattern": "off",
-		"@typescript-eslint/no-empty-interface": "off"
+		"@typescript-eslint/no-empty-interface": "off",
+		"@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_.*$" }]
 	}
 }
