--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,18 @@
 {
-  "typescript.tsdk": "./node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.tsserver.experimental.enableProjectDiagnostics": true,
-  "cSpell.words": [
-    "Badlion",
-    "dozoe",
-    "gameplay",
-    "instagram",
-    "Minecraft",
-    "Purpur",
-    "reddit",
-    "streamlinesmp",
-    "tiktok",
-    "youtube"
-  ]
+	"typescript.tsdk": "./node_modules/typescript/lib",
+	"typescript.enablePromptUseWorkspaceTsdk": true,
+	"typescript.tsserver.experimental.enableProjectDiagnostics": true,
+	"cSpell.words": [
+		"Badlion",
+		"dozoe",
+		"gameplay",
+		"instagram",
+		"Minecraft",
+		"Purpur",
+		"reddit",
+		"streamlinesmp",
+		"tiktok",
+		"youtube",
+		"Ascor"
+	]
 }
