--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@vercel/analytics": "^0.1.3",
 		"classnames": "^2.3.2",
 		"next": "^13.0.1",
+		"next-auth": "^4.16.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"sass": "^1.55.0"
