--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,3 @@
 {
-	"root": true,
-	"parser": "@typescript-eslint/parser",
-	"extends": [
-		"eslint:recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:@typescript-eslint/eslint-recommended",
-		"next/core-web-vitals"
-	],
-	"plugins": ["@typescript-eslint"],
-	"rules": {
-		"no-empty-pattern": "off",
-		"@typescript-eslint/no-empty-interface": "off",
-		"@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_.*$" }]
-	}
+	"extends": "next/core-web-vitals"
 }
