--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-	"name": "streamline-website",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "npx rimraf .next && next dev",
-		"localDev": "npx rimraf .next && next dev -p 3000 -H 192.168.1.130",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@next/font": "^13.0.1",
-		"@vercel/analytics": "^0.1.3",
-		"classnames": "^2.3.2",
-		"next": "^13.0.1",
-		"next-auth": "^4.16.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"sass": "^1.55.0"
-	},
-	"devDependencies": {
-		"@types/node": "^18.11.7",
-		"@types/react": "^18.0.24",
-		"@types/react-dom": "^18.0.8",
-		"@typescript-eslint/eslint-plugin": "^5.42.0",
-		"@typescript-eslint/parser": "^5.42.0",
-		"eslint": "^8.26.0",
-		"eslint-config-next": "^13.0.0",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.8.4"
-	}
+  "name": "streamline-website",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "localDev": "next dev -p 3000 -H 192.168.1.130",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@next/font": "^13.0.1",
+    "@vercel/analytics": "^0.1.3",
+    "classnames": "^2.3.2",
+    "next": "^13.1.6",
+    "next-auth": "^4.16.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.55.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.0",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.8.4"
+  }
 }
