--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/auth": "^0.21.1",
+    "@next-auth/firebase-adapter": "^1.0.3",
     "@next/font": "^13.0.1",
     "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
+    "firebase": "^9.16.0",
     "next": "^13.1.6",
-    "next-auth": "^4.16.4",
+    "next-auth": "^4.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "sass": "^1.55.0",
     "sharp": "^0.31.3"
   },
