--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
     "firebase": "^9.16.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "^13.1.6",
     "next-auth": "^4.19.1",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "sharp": "^0.31.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
