--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "localDev": "next dev -p 3000 -H 192.168.1.13",
     "build": "next build",
     "start": "next start",
