--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@firebase/auth": "^0.21.1",
-    "@next-auth/firebase-adapter": "^1.0.3",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
-    "firebase": "^9.16.0",
+    "firebase-admin": "^11.5.0",
     "next": "^13.2.1",
-    "next-auth": "^4.19.1",
+    "next-auth": "^4.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
