--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^0.1.3",
     "classnames": "^2.3.2",
     "firebase-admin": "^11.5.0",
+    "limiter": "^2.1.0",
     "next": "^13.2.1",
     "next-auth": "^4.20.0",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.26.0",
     "eslint-config-next": "^13.0.0",
     "rimraf": "^3.0.2",
