--- a/package.json
+++ b/package.json
@@ -11,28 +11,25 @@
   },
   "dependencies": {
     "@next-auth/firebase-adapter": "^2.0.1",
-    "@vercel/analytics": "^0.1.3",
+    "@vercel/analytics": "^0.1.11",
     "classnames": "^2.3.2",
     "firebase-admin": "^11.5.0",
-    "next": "^13.2.1",
-    "next-auth": "^4.20.0",
+    "next": "^13.2.3",
+    "next-auth": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "sass": "^1.55.0",
-    "sharp": "^0.31.3"
+    "react-icons": "^4.8.0",
+    "sass": "^1.58.3"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.11.7",
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "^13.0.0",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "eslint": "^8.35.0",
+    "eslint-config-next": "^13.2.3",
+    "typescript": "^4.9.5"
   }
 }
