--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@types/node": "^18.14.6",
