--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^13.2.3",
     "next-auth": "^4.20.1",
     "react": "^18.2.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
