--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next-auth/firebase-adapter": "^2.0.1",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@vercel/analytics": "^0.1.11",
     "classnames": "^2.3.2",
     "firebase-admin": "^11.5.0",
