--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
+    "eslint-utils": "^3.0.0",
     "typescript": "^4.9.5"
   }
 }
