--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "cross-env": "^7.0.3",
+    "discord-api-types": "^0.37.37",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
     "eslint-utils": "^3.0.0",
