--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^0.1.11",
     "classnames": "^2.3.2",
     "firebase-admin": "^11.5.0",
+    "fuzzy-search": "^3.2.1",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.2.3",
     "next-auth": "^4.20.1",
@@ -28,6 +29,7 @@
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/fuzzy-search": "^2.1.2",
     "@types/node": "^18.14.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
