--- a/package.json
+++ b/package.json
@@ -17,21 +17,13 @@
     "firebase-admin": "^11.9.0",
     "fuzzy-search": "^3.2.1",
     "jsonwebtoken": "^9.0.0",
-
- 
     "next": "^13.4.4",
-
     "next-auth": "^4.22.1",
-
-
     "react": "^18.2.0",
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
-
     "react-hook-form": "^7.44.2",
-
     "react-icons": "^4.9.0",
-
     "sass": "^1.61.0",
     "sharp": "^0.32.1",
     "tweetnacl": "^1.0.3"
@@ -48,6 +40,7 @@
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.3",
     "eslint-utils": "^3.0.0",
+    "next-seo": "^6.1.0",
     "typescript": "^4.9.5"
   }
 }
