--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "typeRoots": ["types", "./node_modules/@types"]
+    "typeRoots": ["types", "./node_modules/@types"],
+    "ignoreDeprecations": "6.0"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
