--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "typeRoots": ["types", "./node_modules/@types"],
-    "ignoreDeprecations": "6.0"
+    "typeRoots": ["types", "./node_modules/@types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
